Fixing up the invisible filter bar trigger button.

--- a/app/assets/stylesheets/shared/filter.css.scss
+++ b/app/assets/stylesheets/shared/filter.css.scss
@@ -92,14 +92,16 @@ html.touch {
 
 // Admin Page
 html.admin {
-	menu#filter.tools {
-		input#filter-search { left: 583px; top: 103px; }
-		input.keyword { width: 250px; background-position: 218px 9px; }
-		div.fancy-select { width: 150px !important; }
-	}
+	menu#filter {
+		&.tools {
+			input#filter-search { left: 583px; top: 103px; }
+			input.keyword { width: 250px; background-position: 218px 9px; }
+			div.fancy-select { width: 150px !important; }
+		}
 
-	menu#filter.articles {
-		input#filter-search { left: 694px; top: 103px; }
+		&.articles {
+			input#filter-search { left: 694px; top: 103px; }
+		}
 	}
 }
 
